# TokenTracker

./: .gitignore  AGENTS.md  README.md  TokenTracker.slnx  publish-windows.ps1
.opencode/plans/2026-07-09/: review-perf-fixes.md
qt/: CMakeLists.txt
qt/resources/: app.qrc  app.rc  model-display-names.txt
qt/src/: main.cpp  widget_window.cpp  widget_window.h
src/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  model-display-names.txt
src/Assets/: generate-icon.py
src/Data/: MessageTableRepository.cs
src/Models/: DayUsageSnapshot.cs  ModelBreakdown.cs
src/OpenCodeCostMeter/: MainWindow.axaml  MainWindow.axaml.cs  OpenCodeCostMeter.csproj
src/Services/: ModelDisplayNameRules.cs  SettingsStore.cs  TrayIconService.cs  UsagePoller.cs
src/TokenTrackerWidget/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
src/TokenTrackerWidget/Data/: DbLocator.cs  MessageTableRepository.cs
src/TokenTrackerWidget/Models/: DayUsageSnapshot.cs  ModelBreakdown.cs  WidgetSettings.cs
src/TokenTrackerWidget/ViewModels/: ModelRowViewModel.cs  WidgetViewModel.cs
src/ViewModels/: ModelRowViewModel.cs  WidgetViewModel.cs
